--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_echarts
 description: A data visualization charts library, based on Apache ECharts, able to build advanced charts like WebGL 3D, GIS map, etc.
-version: 2.5.0
+version: 2.4.0
 homepage: https://github.com/entronad/flutter_echarts
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <4.0.0"
@@ -9,8 +10,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter: ^4.2.4
+  flutter_spinkit: ^5.1.0
+  event_bus: ^2.0.0
+  webview_flutter: #4.2.4    
+    git: 
+      url: "https://gitcode.com/openharmony-sig/flutter_packages.git"
+      path: "packages/webview_flutter/webview_flutter"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  path_provider:
+    git:
+      url: https://gitcode.com/openharmony-sig/flutter_packages.git
+      path: packages/path_provider/path_provider
+  path_provider_ohos:
+    git:
+      url: https://gitcode.com/openharmony-sig/flutter_packages.git
+      path: packages/path_provider/path_provider_ohos
